@@ -60,6 +60,8 @@ show edge values with analysis: yes
 automatically play optimally: no
 bookmark wrong decisions: yes
 bookmark when dynamic strategy != basic: yes
+quiz count before reshuffle: yes
+quiz count every N hands: 5
 current bet: 1
 lobby> 
 Thanks for playing!
